2011-07-14  Janis Johnson  <janisjo@codesourcery.com>

	* gcc.target/arm/pr45701-1.c: Don't specify -march, require thumb.
	* gcc.target/arm/pr45701-2.c: Likewise.

	* gcc.target/arm/vfp-ldmdbs.c: Skip for soft float.
	* gcc.target/arm/vfp-ldmias.c: Likewise.
	* gcc.target/arm/vfp-ldmdbd.c: Likewise.
	* gcc.target/arm/vfp-stmdbs.c: Likewise.
	* gcc.target/arm/vfp-ldmiad.c: Likewise.
	* gcc.target/arm/vfp-stmias.c: Likewise.
	* gcc.target/arm/vfp-stmdbd.c: Likewise.
	* gcc.target/arm/vfp-stmiad.c: Likewise.

	* gcc.c-torture/compile/pr41679.c: Move from gcc.target/arm.
	* gcc.c-torture/compile/pr46883.c: Likewise.

	* gcc.target/arm/pr41679.c: Remove test directives in preparation
	for move to ../../gcc.c-torture/compile.
	* gcc.target/arm/pr46883.c: Likewise.

	* lib/target-supports.exp (check_effective_target_arm_dsp): New.
	* gcc.target/arm/wmul-1.c: Use it instead of specific -march.
	* gcc.target/arm/wmul-2.c: Likewise.
	* gcc.target/arm/wmul-3.c: Likewise.
	* gcc.target/arm/wmul-4.c: Likewise.

2011-07-14  Andrew Pinski  <pinskia@gmail.com>

	PR tree-opt/49309
	* g++.dg/torture/pr49309.C: New testcase.

2011-07-14  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/49651
	* gcc.dg/torture/pr49651.c: New testcase.

2011-07-13  Janne Blomqvist  <jb@gcc.gnu.org>

	Backport from trunk:
	PR libfortran/49296
	* gfortran.dg/read_list_eof_1.f90: Add tests for integer, real,
	and logical reads.

2011-07-11  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/49094
	* gcc.dg/tree-ssa/pr49094.c: New test.

2011-07-11  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/49698
	* gfortran.dg/pr49698.f90: New test.

2011-07-10  Tobias Burnus  <burnus@net-b.de>

	PR fortran/49690
	* gfortran.dg/intrinsic_signal.f90: New.

2011-07-10  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/49562
	* gfortran.dg/typebound_proc_23.f90: New.

2011-07-09  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/graphite/pr37485.c (dg-options): Add -floop-block